fixed mobile errors

--- a/src/index.css
+++ b/src/index.css
@@ -251,6 +251,7 @@ footer .logo {
 
 footer>div {
     width: 300px;
+    padding-bottom: 2em;
 }
 
 footer h2 {
@@ -305,6 +306,7 @@ footer i {
     width: 100vw;
     background: url(https://images.pexels.com/photos/870711/pexels-photo-870711.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=1024);
     background-size: 100% 100%;
+    background-repeat: no-repeat;
     background-attachment: fixed;
     color: #fff;
     padding-top: 80px;
@@ -378,24 +380,6 @@ footer i {
     opacity: 1;
 }
 
-.socials {
-    position: absolute;
-    left: 2em;
-    bottom: 2em;
-    display: flex;
-    flex-direction: column;
-    color: #fff;
-}
-
-.socials i {
-    transition: 300ms ease-in-out;
-}
-
-.socials i:hover {
-    color: var(--blueLight);
-    transform: translateX(1px);
-}
-
 #services h1 {
     text-align: center;
     padding: 1.3em 0;
@@ -409,11 +393,11 @@ footer i {
 }
 
 .card {
-    width: 310px;
+    width: 280px;
     min-height: 350px;
     background-color: #fff;
     border: 1px solid var(--mainBlue);
-    padding: 1em;
+    padding: 1em .5em;
     margin-bottom: 2em;
     position: relative;
     border-radius: 4px;
@@ -493,16 +477,24 @@ footer i {
     background-blend-mode: lighten;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    height: 350px;
+    min-height: 370px;
     border-radius: 4px;
-    margin: 1em;
-    padding: 3em 2em 2em 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .popular h2,
 .popular h3 {
     text-transform: capitalize;
-    color: #022a44;
+}
+
+.cat {
+    color: var(--orange);
+}
+
+.popular {
+    color: var(--mainBlue);
 }
 
 .popular label {
@@ -515,14 +507,14 @@ footer i {
 }
 
 .buttons button {
-    padding: .8em 3em;
+    padding: .8em 1em;
 }
 
 .buttons button:last-child {
     background-color: #fff;
     color: var(--mainBlue);
     border: var(--mainBlue) solid 1px;
-    transform: translateX(30px);
+    margin-left: 1em;
 }
 
 .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet,
@@ -533,7 +525,7 @@ footer i {
 .swiper-button-next:after,
 .swiper-button-prev:after,
 .swiper-rtl .swiper-button-next:after {
-    color: var(--mainBlue);
+    display: none;
 }
 
 
@@ -564,6 +556,7 @@ footer i {
 
 .destination {
     background-size: 100% 100%;
+    margin: 2em 0;
 }
 
 .description {
@@ -629,10 +622,11 @@ footer i {
 
 .booking h1 {
     text-transform: capitalize;
+    padding: 0 1em;
 }
 
 .tour-info {
-    padding: 2em 0 0 1em;
+    padding: 2em 0 0 .5em;
 }
 
 .booking label {
@@ -642,7 +636,7 @@ footer i {
 
 .booking input,
 .booking textarea {
-    width: 50vw;
+    width: 85vw;
     padding-left: 2em;
     border: 1px solid var(--mainBlue);
 }
@@ -744,7 +738,7 @@ footer i {
 
 .contacts input,
 .contacts textarea {
-    width: 90%;
+    width: 85vw;
     padding-left: 1em;
     border: 1px solid var(--mainBlue);
 }
@@ -760,7 +754,7 @@ footer i {
 
 select-pure {
     --select-height: 44px;
-    --select-width: 90%;
+    --select-width: 85vw;
     --border-radius: 4px;
     --border-width: 1px;
     --border-color: var(--mainBlue);
@@ -787,11 +781,18 @@ select-pure {
     color: #fff;
 }
 
-@media (min-width:650px) {
-    .align-left {
+@media (min-width:480px) {
+    .card {
         width: 300px;
-        margin: 0 auto;
-        padding: 0 2em;
+    }
+}
+
+@media (min-width:650px) {
+    .swiper-button-next:after,
+    .swiper-button-prev:after,
+    .swiper-rtl .swiper-button-next:after {
+        display: block;
+        color: var(--mainBlue);
     }
     .cta {
         margin-left: 2em;
@@ -809,14 +810,20 @@ select-pure {
     }
     .contacts input,
     .contacts textarea {
-        width: 70%;
+        width: 60vw;
+    }
+    .booking input,
+    .booking textarea {
+        width: 50vw;
+        padding-left: 2em;
+        border: 1px solid var(--mainBlue);
     }
     select-pure {
         --select-width: 70%;
     }
 }
 
-@media (min-width:800px) {
+@media (min-width:850px) {
     .main-nav {
         display: block;
     }
@@ -830,19 +837,11 @@ select-pure {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 2em;
-    }
-}
-
-@media (min-width:900px) {
-    footer {
-        /* display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        place-items: center; */
     }
     .destination {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        margin: 0;
     }
     .destination:nth-child(odd)>.description {
         transform: translateX(100%);
